--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <title>喜欢就和好兄弟分享</title>
-  <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.16.0/skins/default/aliplayer-min.css" />
+  <link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.16.3/skins/default/aliplayer-min.css" />
   <script type="text/javascript" charset="utf-8"
-    src="https://g.alicdn.com/de/prismplayer/2.16.0/aliplayer-min.js"></script>
+    src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.16.3/aliplayer-min.js"></script>
   <style>
     body {
       background-color: black;
